Added running mode configuration option (#3)
* Added running mode flag to the config

* Added running mode flag to the config

* Use batches sequencing function depending on the mode

--- a/config/environments/local/app.config.toml
+++ b/config/environments/local/app.config.toml
@@ -4,6 +4,7 @@ Level = "info"
 Outputs = ["stderr"]
 
 [SequenceSender]
+Mode = "rollup"
 WaitPeriodSendSequence = "15s"
 LastBatchVirtualizationTimeMaxWaitPeriod = "10s"
 MaxTxSizeForL1 = 131072
